{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 22,
  "lineage": "79a772d9-604e-c216-a760-b2106b5e0b65",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d0115d627f8ee8c8",
            "arn": "arn:aws:ec2:us-east-1:341605398108:instance/i-076a8e67c386c3c80",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076a8e67c386c3c80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5cb1d4131f446fe",
            "private_dns": "ip-10-0-101-110.ec2.internal",
            "private_ip": "10.0.101.110",
            "public_ip": "3.92.28.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00322c31747fc6ae9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03beaa08dc772a9b5",
            "tags": {
              "Environment": "dev",
              "Name": "Test Instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Test Instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Test Instance"
            },
            "vpc_security_group_ids": [
              "sg-0c80309608a75418c"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcfd49b95f847559",
            "domain": "vpc",
            "id": "eipalloc-0fcfd49b95f847559",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-221-1-54.compute-1.amazonaws.com",
            "public_ip": "3.221.1.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050d33416001024d8",
            "domain": "vpc",
            "id": "eipalloc-050d33416001024d8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-9-26.compute-1.amazonaws.com",
            "public_ip": "44.198.9.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:internet-gateway/igw-04b3a8502a97bddc2",
            "id": "igw-04b3a8502a97bddc2",
            "owner_id": "341605398108",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcfd49b95f847559",
            "connectivity_type": "public",
            "id": "nat-04c1bd3e56b6670fc",
            "network_interface_id": "eni-04353846ea5331391",
            "private_ip": "10.0.101.153",
            "public_ip": "3.221.1.54",
            "subnet_id": "subnet-03beaa08dc772a9b5",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050d33416001024d8",
            "connectivity_type": "public",
            "id": "nat-03e1b415ffe3e28ee",
            "network_interface_id": "eni-0301911c3ce7cf878",
            "private_ip": "10.0.102.234",
            "public_ip": "44.198.9.26",
            "subnet_id": "subnet-0d25e4d66c95ae0cc",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a027186645f4720d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04c1bd3e56b6670fc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a027186645f4720d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d59b82bf1a7755d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03e1b415ffe3e28ee",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d59b82bf1a7755d1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b3a8502a97bddc2",
            "id": "r-rtb-06081fdbfd16a4de11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06081fdbfd16a4de1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:route-table/rtb-0a027186645f4720d",
            "id": "rtb-0a027186645f4720d",
            "owner_id": "341605398108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:route-table/rtb-0d59b82bf1a7755d1",
            "id": "rtb-0d59b82bf1a7755d1",
            "owner_id": "341605398108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:route-table/rtb-06081fdbfd16a4de1",
            "id": "rtb-06081fdbfd16a4de1",
            "owner_id": "341605398108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00910914f024b046c",
            "route_table_id": "rtb-0a027186645f4720d",
            "subnet_id": "subnet-034cd7c28fdaf81be"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04429c241eb128dfa",
            "route_table_id": "rtb-0d59b82bf1a7755d1",
            "subnet_id": "subnet-0cdcabf90f8676780"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010548fe8d05c7c88",
            "route_table_id": "rtb-06081fdbfd16a4de1",
            "subnet_id": "subnet-03beaa08dc772a9b5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021e3812d25b6c3cf",
            "route_table_id": "rtb-06081fdbfd16a4de1",
            "subnet_id": "subnet-0d25e4d66c95ae0cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:subnet/subnet-034cd7c28fdaf81be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-034cd7c28fdaf81be",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341605398108",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:subnet/subnet-0cdcabf90f8676780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cdcabf90f8676780",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "341605398108",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-private-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:subnet/subnet-03beaa08dc772a9b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-03beaa08dc772a9b5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "341605398108",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1a",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:subnet/subnet-0d25e4d66c95ae0cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0d25e4d66c95ae0cc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "341605398108",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc-public-us-east-1b",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01be6024e0c5d8af2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341605398108:vpc/vpc-01be6024e0c5d8af2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041c0a50b2816f47e",
            "default_route_table_id": "rtb-07fc7359cb2378ad4",
            "default_security_group_id": "sg-0c80309608a75418c",
            "dhcp_options_id": "dopt-8fd7bfe9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01be6024e0c5d8af2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07fc7359cb2378ad4",
            "owner_id": "341605398108",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-vpc",
              "Owner": "Anand Kirori",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}